# ticket_manager

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: main.py
app/adapter/: adapter.py  chat_adapter.py  dict_utils.py  message_adapter.py  ticket_adapter.py  user_adapter.py
app/domain/models/: chat.py  message.py  ticket.py  user.py
app/domain/usecases/: chat_usecases.py  message_usecases.py  ticket_usecases.py  user_usecases.py
app/infra/: connection.py
app/infra/config/: connection.py  schemas.py
app/infra/repositories/: chat_repository.py  message_repository.py  ticket_repository.py  user_repository.py
app/infra/routes/: chat_router.py  message_router.py  ticket_router.py  user_router.py
docs/: issues.md
