[tool.poetry]
name = "ticket-manager"
version = "0.1.0"
description = ""
authors = ["hallan-n <hallanneves01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
